Vistas con estilos casi terminados TI

--- a/app/src/main/res/layout/activity_lista_dispositivos.xml
+++ b/app/src/main/res/layout/activity_lista_dispositivos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1F91EC"
+    android:background="@color/background"
     tools:context=".ti.ListaDispositivosActivity">
 
     <TextView
@@ -24,8 +24,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerDispositivos"
-        android:layout_width="393dp"
-        android:layout_height="493dp"
+        android:layout_width="356dp"
+        android:layout_height="474dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
@@ -37,6 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        app:backgroundTint="@color/verde"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
