--- a/app/src/main/res/layout/activity_agregar_dispositivo.xml
+++ b/app/src/main/res/layout/activity_agregar_dispositivo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1F91EC"
+    android:background="@color/background"
     tools:context=".ti.AgregarDispositivoActivity">
 
     <TextView
@@ -24,7 +24,7 @@
     <LinearLayout
         android:layout_width="358dp"
         android:layout_height="600dp"
-        android:background="#CC5E3B"
+        android:background="#E35A2E"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -35,42 +35,50 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="27dp"
+            android:layout_height="19dp"
             android:orientation="horizontal"></LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="54dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="67dp"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"></LinearLayout>
+                android:layout_width="match_parent"
+                android:layout_height="49dp"
+                android:orientation="horizontal">
 
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="290dp"
-                android:layout_height="match_parent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="221dp"
-                    android:layout_height="39dp"
-                    android:drawableLeft="@drawable/ic_baseline_short_text_24"
-                    android:hint="nombre"
-                    android:inputType="textPersonName" />
+                <LinearLayout
+                    android:layout_width="67dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"></LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textNombreA"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_width="290dp"
+                    android:layout_height="match_parent">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="221dp"
+                        android:layout_height="39dp"
+                        android:drawableLeft="@drawable/ic_baseline_short_text_24"
+                        android:hint="nombre"
+                        android:inputType="textPersonName" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/textNombreA"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
+
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="34dp"
+            android:layout_height="37dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -83,7 +91,8 @@
                 android:layout_width="4dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="Tipo" />
+                android:text="Tipo"
+                android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/spinnerTipo"
@@ -135,33 +144,39 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="385dp"
-            android:layout_height="50dp"
-            android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="67dp"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"></LinearLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="49dp"
+                android:orientation="horizontal">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="223dp"
-                    android:layout_height="43dp"
-                    android:drawableLeft="@drawable/ic_baseline_assignment_24"
-                    android:hint="caracteristicas"
-                    android:inputType="textPersonName" />
+                <LinearLayout
+                    android:layout_width="67dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"></LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textCaracteristicasA"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="222dp"
+                        android:layout_height="39dp"
+                        android:drawableLeft="@drawable/ic_baseline_assignment_24"
+                        android:hint="caracteristicas"
+                        android:inputType="textPersonName" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/textCaracteristicasA"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -170,59 +185,72 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="66dp"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"></LinearLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="49dp"
+                android:orientation="horizontal">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="221dp"
-                    android:layout_height="52dp"
-                    android:drawableLeft="@drawable/ic_baseline_battery_charging_full_24"
-                    android:hint="incluye"
-                    android:inputType="textPersonName" />
+                <LinearLayout
+                    android:layout_width="67dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"></LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textIncluyeA"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </com.google.android.material.textfield.TextInputLayout>
+                    android:layout_height="match_parent">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="222dp"
+                        android:layout_height="39dp"
+                        android:drawableLeft="@drawable/ic_baseline_battery_charging_full_24"
+                        android:hint="incluye"
+                        android:inputType="textPersonName" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/textIncluyeA"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="76dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="66dp"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"></LinearLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="49dp"
+                android:orientation="horizontal">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="217dp"
-                    android:layout_height="53dp"
-                    android:drawableLeft="@drawable/ic_baseline_exposure_24"
-                    android:hint="stock"
-                    android:inputType="textPersonName" />
+                <LinearLayout
+                    android:layout_width="67dp"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"></LinearLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/textStockA"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="match_parent">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="222dp"
+                        android:layout_height="39dp"
+                        android:drawableLeft="@drawable/ic_baseline_exposure_24"
+                        android:hint="stock"
+                        android:inputType="textPersonName" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/textStockA"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -266,13 +294,24 @@
                         <LinearLayout
                             android:layout_width="121dp"
                             android:layout_height="53dp"
-                            android:orientation="vertical"></LinearLayout>
+                            android:orientation="vertical">
+
+                            <Button
+                                android:id="@+id/btnImportarDispositivo"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:backgroundTint="@color/purple_700"
+                                android:text="Importar"
+                                app:cornerRadius="50dp" />
+                        </LinearLayout>
 
                         <Button
                             android:id="@+id/btnTomarFoto"
-                            android:layout_width="121dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Tomar Foto" />
+                            android:backgroundTint="@color/purple_700"
+                            android:text="Tomar Foto"
+                            app:cornerRadius="50dp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -316,7 +355,9 @@
                             android:id="@+id/btnAgregarDispositivo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Agregar" />
+                            android:backgroundTint="@color/verde"
+                            android:text="Agregar"
+                            app:cornerRadius="50dp" />
                     </LinearLayout>
 
                     <LinearLayout
@@ -338,7 +379,9 @@
                             android:id="@+id/btnCancelarA"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Cancelar" />
+                            android:backgroundTint="@color/rojo"
+                            android:text="Cancelar"
+                            app:cornerRadius="50dp" />
                     </LinearLayout>
 
                     <LinearLayout
