--- a/app/src/main/res/layout/listardispositivos_rv.xml
+++ b/app/src/main/res/layout/listardispositivos_rv.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/textMarca"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp"
+    android:orientation="vertical">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="410dp"
-        android:layout_height="213dp"
-        android:background="#E4714C"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="211dp"
+        android:background="#E35A2E"
+        android:gravity="center"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
 
@@ -22,13 +24,13 @@
 
             <ImageView
                 android:id="@+id/imageDispositivo"
-                android:layout_width="wrap_content"
+                android:layout_width="107dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 tools:srcCompat="@tools:sample/avatars" />
 
             <LinearLayout
-                android:layout_width="32dp"
+                android:layout_width="12dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:orientation="horizontal"></LinearLayout>
@@ -39,46 +41,131 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/textNombre"
-                    android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    android:text="Nombre" />
-
-                <TextView
-                    android:id="@+id/textTipo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Tipo" />
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Marca" />
-
-                <TextView
-                    android:id="@+id/textCaracteristicas"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Caracteristicas" />
-
-                <TextView
-                    android:id="@+id/textIncluye"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Incluye" />
-
-                <TextView
-                    android:id="@+id/textStock"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Stock" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="12dp"
-                    android:orientation="vertical"></LinearLayout>
+                    android:layout_height="142dp"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="29dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView25"
+                            android:layout_width="63dp"
+                            android:layout_height="29dp"
+                            android:text="Nombre"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textNombre"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="22dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView26"
+                            android:layout_width="63dp"
+                            android:layout_height="wrap_content"
+                            android:text="Tipo"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textTipo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="22dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView27"
+                            android:layout_width="63dp"
+                            android:layout_height="wrap_content"
+                            android:text="Marca"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textMarca"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="22dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView28"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Caracteristicas"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textCaracteristicas"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="22dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView29"
+                            android:layout_width="62dp"
+                            android:layout_height="wrap_content"
+                            android:text="Incluye"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textIncluye"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="22dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView30"
+                            android:layout_width="61dp"
+                            android:layout_height="wrap_content"
+                            android:text="Stock"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/textStock"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="12dp"
+                        android:orientation="vertical"></LinearLayout>
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -90,7 +177,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:text="Editar" />
+                        android:backgroundTint="@color/verde"
+                        android:text="Editar"
+                        app:cornerRadius="50dp"/>
 
                     <LinearLayout
                         android:layout_width="17dp"
@@ -103,12 +192,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:backgroundTint="@color/rojo"
                         android:text="Borrar"
-                        app:iconTint="#9C0C0C"
-                        app:rippleColor="#E60C0C"
-                        app:strokeColor="#CD0707" />
+                        app:cornerRadius="50dp"/>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+</LinearLayout>
