--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="login_inputs">#D9D9D9</color>
     <color name="navbar">#E39B2E</color>
     <color name="navbar_700">#6C4812</color>
+    <color name="rojo">#E60808</color>
+    <color name="verde">#1DC824</color>
 </resources>
