--- a/app/src/main/res/layout/activity_agregar_dispositivo.xml
+++ b/app/src/main/res/layout/activity_agregar_dispositivo.xml
@@ -271,7 +271,7 @@
                     android:orientation="horizontal"></LinearLayout>
 
                 <Button
-                    android:id="@+id/btnMenos"
+                    android:id="@+id/btnEdit"
                     android:layout_width="23dp"
                     android:layout_height="40dp"
                     android:layout_weight="1"
