--- a/app/src/main/res/layout/activity_ubicacion.xml
+++ b/app/src/main/res/layout/activity_ubicacion.xml
@@ -24,7 +24,7 @@
     <LinearLayout
         android:layout_width="369dp"
         android:layout_height="554dp"
-        android:background="#E35A2E"
+        android:background="#E39B2E"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
