--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -10,19 +10,23 @@
         android:id="@+id/imagePerfil"
         android:layout_width="80dp"
         android:layout_height="80dp"/>
+
     <TextView
+        android:id="@+id/nombreNav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Javier Marroquin"
         android:textColor="#fff"
         android:textSize="30dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
+
     <TextView
+        android:id="@+id/correoNav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="javier.marroquin@pucp.edu.pe"
         android:textColor="#fff"
         android:textSize="18dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
 </LinearLayout>
