--- a/app/src/main/res/layout/pedidos_rv.xml
+++ b/app/src/main/res/layout/pedidos_rv.xml
@@ -11,15 +11,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:background="#E35A2E"
+        android:background="#E39B2E"
         android:gravity="center"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="1dp">
 
 
         <LinearLayout
-            android:layout_width="380dp"
-            android:layout_height="427dp"
+            android:layout_width="34dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"></LinearLayout>
+
+        <LinearLayout
+            android:layout_width="333dp"
+            android:layout_height="459dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -69,13 +74,13 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="297dp"
+                        android:layout_width="250dp"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
                         <TextView
                             android:id="@+id/textMotivo"
-                            android:layout_width="wrap_content"
+                            android:layout_width="215dp"
                             android:layout_height="match_parent"
                             android:layout_weight="1"
                             android:text="TextView" />
@@ -111,7 +116,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="297dp"
+                        android:layout_width="250dp"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
@@ -153,7 +158,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="297dp"
+                        android:layout_width="250dp"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
@@ -194,7 +199,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="270dp"
+                        android:layout_width="220dp"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
@@ -237,7 +242,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="270dp"
+                        android:layout_width="220dp"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
@@ -280,7 +285,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="270dp"
+                        android:layout_width="220dp"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
@@ -324,7 +329,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="270dp"
+                        android:layout_width="220dp"
                         android:layout_height="match_parent"
                         android:orientation="horizontal">
 
@@ -345,38 +350,38 @@
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="165dp"
+                    android:layout_width="125dp"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="63dp"
+                        android:id="@+id/btnAprobar"
+                        android:layout_width="125dp"
+                        android:layout_height="65dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/verde"
                         android:text="Aprobar"
-                        app:cornerRadius="50dp"/>
+                        app:cornerRadius="50dp" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="49dp"
+                    android:layout_width="28dp"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"></LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="125dp"
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="63dp"
+                        android:id="@+id/btnRechazar"
+                        android:layout_width="125dp"
+                        android:layout_height="65dp"
                         android:layout_weight="1"
                         android:backgroundTint="@color/rojo"
                         android:text="Rechazar"
-                        app:cornerRadius="50dp"/>
+                        app:cornerRadius="50dp" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
