--- a/app/src/main/res/layout/activity_rechazo.xml
+++ b/app/src/main/res/layout/activity_rechazo.xml
@@ -86,13 +86,22 @@
                 android:layout_height="match_parent"
                 android:orientation="horizontal"></LinearLayout>
 
-            <TextView
-                android:id="@+id/textView22"
-                android:layout_width="210dp"
+            <LinearLayout
+                android:layout_width="274dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#FFFFFFFF"
-                android:hint="Texto" />
+                android:background="#FFFFFF"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/editTextTextMultiLine2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:gravity="start|top"
+                    android:inputType="textMultiLine"
+                    android:textColor="#000000" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="46dp"
