correcion en vista

--- a/app/src/main/res/layout/activity_lista_dispositivos.xml
+++ b/app/src/main/res/layout/activity_lista_dispositivos.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lista de dispositivos"
+                android:text="Lista de Dispositivos"
                 android:textSize="34sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
