--- a/app/src/main/res/layout/activity_admin_perfil.xml
+++ b/app/src/main/res/layout/activity_admin_perfil.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".admin.AdminMainActivity"
     android:id="@+id/drawer_layout">
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,28 +19,49 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="LISTA USUARIOS TI"
+                android:text="PERFIL ADMIN"
                 android:textStyle="bold"
                 android:textSize="30sp"
                 android:layout_margin="20dp"
                 android:textAlignment="center"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycleViewTI"
-                android:layout_width="match_parent"
-                android:layout_height="400dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/border" />
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="end">
+                android:layout_height="500dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:background="@drawable/border">
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/tectNombrePerfil"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Juan Perez"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:textAlignment="center"/>
+                <TextView
+                    android:layout_marginBottom="10dp"
+                    android:id="@+id/textDNIPerfil"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:text="DNI: 74229427"
+                    android:textAlignment="center"/>
+                <ImageView
+                    android:id="@+id/imgPerfilAdmin"
+                    android:layout_margin="10dp"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    android:src="@drawable/ic_baseline_account_circle_24"/>
                 <Button
-                    android:id="@+id/btnAgregarTIAdminLista"
+                    android:id="@+id/btnEditarFotoPerfil"
+                    android:layout_margin="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="@color/verde"
-                    android:text="Agregar TI"/>
+                    android:text="EDITAR PERFIL"
+                    android:backgroundTint="@color/verde"/>
             </LinearLayout>
 
         </LinearLayout>
@@ -55,6 +75,4 @@
         android:id="@+id/nav_view"
         android:layout_gravity="start">
     </com.google.android.material.navigation.NavigationView>
-
-
 </androidx.drawerlayout.widget.DrawerLayout>
