--- a/app/src/main/res/layout/activity_admin_reportes.xml
+++ b/app/src/main/res/layout/activity_admin_reportes.xml
@@ -20,28 +20,31 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="LISTA USUARIOS TI"
+                android:text="REPORTES"
                 android:textStyle="bold"
                 android:textSize="30sp"
                 android:layout_margin="20dp"
                 android:textAlignment="center"/>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycleViewTI"
-                android:layout_width="match_parent"
-                android:layout_height="400dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/border" />
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="end">
+                android:layout_height="500dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:background="@drawable/border">
                 <Button
-                    android:id="@+id/btnAgregarTIAdminLista"
+                android:id="@+id/btnEquiposPrestados"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:backgroundTint="@color/verde"
+                android:text="Equipos Prestados"/>
+                <Button
+                    android:id="@+id/btnListaUsuariosSistema"
                     android:layout_width="wrap_content"
+                    android:layout_margin="10dp"
                     android:layout_height="wrap_content"
                     android:backgroundTint="@color/verde"
-                    android:text="Agregar TI"/>
+                    android:text="Lista de Usuarios"/>
             </LinearLayout>
 
         </LinearLayout>
