--- a/app/src/main/res/layout/activity_detalles_admin.xml
+++ b/app/src/main/res/layout/activity_detalles_admin.xml
@@ -1,10 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".admin.DetallesAdminActivity">
+    tools:context=".admin.DetallesAdminActivity"
+    android:id="@+id/drawer_layout">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="@color/background">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_margin="20dp"
+        android:gravity="center">
+      <TextView
+          android:id="@+id/textDispositivoUsuario"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="LISTA DISPOSITIVOS"
+          android:textStyle="bold"
+          android:textSize="30sp"
+          android:layout_margin="20dp"
+          android:textAlignment="center"/>
+
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/recycleViewDispositivosUser"
+          android:layout_width="match_parent"
+          android:layout_height="400dp"
+          android:layout_margin="10dp"
+          android:background="@drawable/border"/>
+
+    </LinearLayout>
+  </ScrollView>
+
+  <com.google.android.material.navigation.NavigationView
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      app:headerLayout="@layout/header"
+      app:menu="@menu/menu_admin"
+      android:id="@+id/nav_view"
+      android:layout_gravity="start">
+  </com.google.android.material.navigation.NavigationView>
+
+</androidx.drawerlayout.widget.DrawerLayout>
